@@ -4,13 +4,12 @@ import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
-import engima.waratsea.model.game.Config;
+import engima.waratsea.model.game.Resource;
 import engima.waratsea.model.game.Side;
 import engima.waratsea.model.minefield.deployment.data.DeploymentData;
 import lombok.extern.slf4j.Slf4j;
 
 import java.io.BufferedReader;
-import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Type;
 import java.net.URL;
 import java.net.URLDecoder;
@@ -29,7 +28,7 @@ import java.util.stream.Collectors;
 @Slf4j
 @Singleton
 public class MinefieldDeploymentDAO {
-    private Config config;
+    private Resource config;
 
     private MinefieldDeploymentFactory minefieldDeploymentFactory;
 
@@ -40,7 +39,7 @@ public class MinefieldDeploymentDAO {
      * @param minefieldDeploymentFactory The minefield deployment factory.
      */
     @Inject
-    public MinefieldDeploymentDAO(final Config config,
+    public MinefieldDeploymentDAO(final Resource config,
                                   final MinefieldDeploymentFactory minefieldDeploymentFactory) {
         this.config = config;
         this.minefieldDeploymentFactory = minefieldDeploymentFactory;
@@ -90,22 +89,18 @@ public class MinefieldDeploymentDAO {
      * @return The data read from the JSON file.
      */
     private List<DeploymentData> readMinefield(final URL url, final Side side) {
-        try {
-            Path path = Paths.get(URLDecoder.decode(url.getPath(), "UTF-8"));
-            try (BufferedReader br = Files.newBufferedReader(path, StandardCharsets.UTF_8)) {
-                Type collectionType = new TypeToken<List<DeploymentData>>() { }.getType();
+        Path path = Paths.get(URLDecoder.decode(url.getPath(), StandardCharsets.UTF_8));
+        try (BufferedReader br = Files.newBufferedReader(path, StandardCharsets.UTF_8)) {
+            Type collectionType = new TypeToken<List<DeploymentData>>() {
+            }.getType();
 
-                Gson gson = new Gson();
-                List<DeploymentData> deploymentData = gson.fromJson(br, collectionType);
+            Gson gson = new Gson();
+            List<DeploymentData> deploymentData = gson.fromJson(br, collectionType);
 
-                log.debug("load minefields for side {}", side);
+            log.debug("load minefields for side {}", side);
 
-                return deploymentData;
-            } catch (Exception ex) {                                                                                    // Catch any Gson errors.
-                log.error("Unable to load minefields '{}' for side: {}. {}", new Object[]{url.getPath(), side, ex});
-                return null;
-            }
-        } catch (UnsupportedEncodingException ex) {
+            return deploymentData;
+        } catch (Exception ex) {                                                                                    // Catch any Gson errors.
             log.error("Unable to load minefields '{}' for side: {}. {}", new Object[]{url.getPath(), side, ex});
             return null;
         }
